--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,7 +17,7 @@ license="${mod_license}"
 # The modid of the mod
 modId="MedicalSystem" #mandatory
 # The version number of the mod
-version="$α.0.0" #mandatory
+version="α.0.0" #mandatory
 # A display name for the mod
 displayName="MedicalSystemMod" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://docs.minecraftforge.net/en/latest/misc/updatechecker/
